# cmake_learning

./: LICENSE  README.md
RML/: CMakeLists.txt  readme.md
cmake_hello/: CMakeLists.txt
cmake_hello/src/: CMakeLists.txt  hello.c  main.c
